k8s/actualbudget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actualbudget
spec:
  type: ClusterIP
  selector:
    app: actual-budget
  ports:
    - port: 5006
      targetPort: 5006
